infra/k8s/authentication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
      - name: authentication
        image:  arghajeet/ticket-microservice-authentication
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-srv
spec:
  selector:
    app: authentication
  ports:
  - name: authentication
    protocol: TCP
    port: 1000
    targetPort: 1000
