infra/k8s/authentication-mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-mongodb
  template:
    metadata:
      labels:
        app: authentication-mongodb
    spec:
      containers:
      - name: authentication-mongodb
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-mongodb-srv
spec:
  selector:
    app: authentication-mongodb
  ports:
    - name: authentication-mongodb-port
      protocol: TCP
      port: 27017
      targetPort: 27017
